--- a/src/templates/countriesCard.hbs
+++ b/src/templates/countriesCard.hbs
@@ -1,18 +1,26 @@
 {{#each this}}
-<div class="countriesCard-js">
+
+<div class="container countriesCard-js">
+
   <h2 class="country-name">{{name}}</h2>
+
   <ul class="country-card-list">
+
     <li class="country-card-item">
+
       <ul class="country-description">
+
         <li class="county-capital">Capital: {{capital}}</li>
         <li class="country-population">Population: {{population}}</li>
-        <ul class="country-languges">Languages:
-          {{#each languages}}
-          <li class="country-languages_item">{{this.name}}</li>
+
+        <ul class="country-languges">Languages: {{#each languages}}
+          <li>{{this.name}}</li>
           {{/each}}
+
         </ul>
       </ul>
     </li>
+
     <li class="country-card-item">
       <div class="country-flag">
         <img src="{{flag}}" alt="flag of {{name}}" width="400" height="270">
